- Create file uploader componente - Create Directive for Drag&Drop - Add config form to Tailwind.config - Create Footer component - Update Router

--- a/src/app/create-training/create-training.component.html
+++ b/src/app/create-training/create-training.component.html
@@ -1,1 +1,20 @@
-<p>create-training works!</p>
+
+
+
+
+
+<div class="max-w-[85rem] px-4 py-10 sm:px-6 lg:px-8 lg:py-14 mx-auto">
+    <!-- Grid -->
+    <div class="grid md:grid-cols-2 items-center gap-12">
+        <app-file-uploader></app-file-uploader>
+      <!-- End Col -->
+  
+      <div class="relative">
+        <!-- Card -->
+        <app-form-train></app-form-train>
+        <!-- End Card -->
+      </div>
+      <!-- End Col -->
+    </div>
+    <!-- End Grid -->
+  </div>
