--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
+<div id="main">
+    <app-header></app-header>
+        <section>
+            <router-outlet></router-outlet>
+        </section>
+    <app-footer></app-footer>
+</div>
