--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -15,10 +15,11 @@
         <div class="flex flex-col sm:flex-row sm:items-center py-2 md:py-0 sm:ps-7">
 
             @for(route of rotesUrl; track route.id){
-              <a class="py-3 ps-px sm:px-3 sm:py-6 font-medium text-gray-400 active:text-blue-500 hover:text-gray-600 "
-              [routerLink]="[route.url]"
-              routerLinkActive="active"
-              >{{route.title}}</a>
+              <a class="py-3 ps-px sm:px-3 sm:py-6 font-medium"
+                [routerLink]="[route.url]"
+                routerLinkActive="text-blue-500"
+                [ngClass]="{ 'text-gray-400': !isActive(route.url) }"
+                >{{route.title}}</a>
             }
 
           <div class="flex items-center gap-x-2 py-2 sm:py-0 sm:ms-auto hs-tooltip [--trigger:hover]">
