--- a/src/app/components/form-train/form-train.component.html
+++ b/src/app/components/form-train/form-train.component.html
@@ -1,36 +1,89 @@
 <div class="max-w-[85rem] px-4 py-10 sm:px-6 lg:px-8 lg:py-14 mx-auto">
     <div class="mx-auto max-w-2xl">
-      <div class="text-center">
-        <h2 class="text-xl text-gray-800 font-bold sm:text-3xl dark:text-white">
-          Post a comment
-        </h2>
-      </div>
-  
       <!-- Card -->
       <div class="mt-5 p-4 relative z-10 bg-white border rounded-xl sm:mt-10 md:p-10 dark:bg-neutral-900 dark:border-neutral-700">
-        <form>
-          <div class="mb-4 sm:mb-8">
-            <label for="hs-feedback-post-comment-name-1" class="block mb-2 text-sm font-medium dark:text-white">Full name</label>
-            <input type="text" id="hs-feedback-post-comment-name-1" class="py-3 px-4 block w-full border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600" placeholder="Full name">
-          </div>
-  
-          <div class="mb-4 sm:mb-8">
-            <label for="hs-feedback-post-comment-email-1" class="block mb-2 text-sm font-medium dark:text-white">Email address</label>
-            <input type="email" id="hs-feedback-post-comment-email-1" class="py-3 px-4 block w-full border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600" placeholder="Email address">
-          </div>
-  
-          <div>
-            <label for="hs-feedback-post-comment-textarea-1" class="block mb-2 text-sm font-medium dark:text-white">Comment</label>
-            <div class="mt-1">
-              <textarea id="hs-feedback-post-comment-textarea-1" name="hs-feedback-post-comment-textarea-1" rows="3" class="py-3 px-4 block w-full border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600" placeholder="Leave your comment here..."></textarea>
+
+        <p class="text-2xl text-gray-800 pb-2 font-bold sm:text-2xl dark:text-white">
+          Training Form
+        </p>
+
+        <div class="bg-gray-50 border border-gray-200 text-sm text-gray-600 rounded-lg p-4 dark:bg-white/10 dark:border-white/10 dark:text-neutral-400" role="alert">
+          <div class="flex">
+            <div class="flex-shrink-0">
+              <svg fill="currentColor" class="size-6" viewBox="0 0 24 24" role="img" xmlns="http://www.w3.org/2000/svg"><path d="M22.2819 9.8211a5.9847 5.9847 0 0 0-.5157-4.9108 6.0462 6.0462 0 0 0-6.5098-2.9A6.0651 6.0651 0 0 0 4.9807 4.1818a5.9847 5.9847 0 0 0-3.9977 2.9 6.0462 6.0462 0 0 0 .7427 7.0966 5.98 5.98 0 0 0 .511 4.9107 6.051 6.051 0 0 0 6.5146 2.9001A5.9847 5.9847 0 0 0 13.2599 24a6.0557 6.0557 0 0 0 5.7718-4.2058 5.9894 5.9894 0 0 0 3.9977-2.9001 6.0557 6.0557 0 0 0-.7475-7.0729zm-9.022 12.6081a4.4755 4.4755 0 0 1-2.8764-1.0408l.1419-.0804 4.7783-2.7582a.7948.7948 0 0 0 .3927-.6813v-6.7369l2.02 1.1686a.071.071 0 0 1 .038.052v5.5826a4.504 4.504 0 0 1-4.4945 4.4944zm-9.6607-4.1254a4.4708 4.4708 0 0 1-.5346-3.0137l.142.0852 4.783 2.7582a.7712.7712 0 0 0 .7806 0l5.8428-3.3685v2.3324a.0804.0804 0 0 1-.0332.0615L9.74 19.9502a4.4992 4.4992 0 0 1-6.1408-1.6464zM2.3408 7.8956a4.485 4.485 0 0 1 2.3655-1.9728V11.6a.7664.7664 0 0 0 .3879.6765l5.8144 3.3543-2.0201 1.1685a.0757.0757 0 0 1-.071 0l-4.8303-2.7865A4.504 4.504 0 0 1 2.3408 7.872zm16.5963 3.8558L13.1038 8.364 15.1192 7.2a.0757.0757 0 0 1 .071 0l4.8303 2.7913a4.4944 4.4944 0 0 1-.6765 8.1042v-5.6772a.79.79 0 0 0-.407-.667zm2.0107-3.0231l-.142-.0852-4.7735-2.7818a.7759.7759 0 0 0-.7854 0L9.409 9.2297V6.8974a.0662.0662 0 0 1 .0284-.0615l4.8303-2.7866a4.4992 4.4992 0 0 1 6.6802 4.66zM8.3065 12.863l-2.02-1.1638a.0804.0804 0 0 1-.038-.0567V6.0742a4.4992 4.4992 0 0 1 7.3757-3.4537l-.142.0805L8.704 5.459a.7948.7948 0 0 0-.3927.6813zm1.0976-2.3654l2.602-1.4998 2.6069 1.4998v2.9994l-2.5974 1.4997-2.6067-1.4997Z"/></svg>
+            </div>
+            <div class="flex-1 md:flex md:justify-between ms-2">
+              <p class="text-xs">
+                To create a training form you must enter your OpenAI API key. This will be saved in your browser, it will not be shared in the cloud.
+              </p>
+              <p class="text-sm mt-3 md:mt-0 md:ms-6">
+                <a class="text-gray-800 hover:text-gray-500 font-medium whitespace-nowrap dark:text-neutral-200 dark:hover:text-neutral-400" target="_blank" href="https://platform.openai.com/settings/profile?tab=api-keys">Get ApiKey</a>
+              </p>
             </div>
           </div>
-  
+        </div>
+
+        <form [formGroup]="formTrain">
+
+          <div>
+            <label for="hs-search-box-with-loading-2" class="block text-sm font-medium mb-2 dark:text-white">Search</label>
+            <div class="flex rounded-lg shadow-sm">
+              <input type="text" id="hs-search-box-with-loading-2" name="hs-search-box-with-loading-2" class="py-3 px-4 block w-full border-gray-200 shadow-sm rounded-s-lg text-sm focus:z-10 focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600" placeholder="Input search">
+              <button type="button" class="w-[2.875rem] h-[2.875rem] flex-shrink-0 inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-e-md border border-transparent bg-blue-600 text-white hover:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none">
+                <span class="animate-spin inline-block size-4 border-[3px] border-current border-t-transparent text-white rounded-full" role="status" aria-label="loading">
+                  <span class="sr-only">Loading...</span>
+                </span>
+              </button>
+            </div>
+          </div>
+
+          <app-input 
+            [control]="'openAiKey'" 
+            [inputType]="'text'" 
+            [label]="'APi Key OpenAI'"
+            [type]="'text'" 
+            [formGroup]="formTrain" 
+            [errorMessage]="'This Api Key is wrong'"
+          >
+          </app-input>
+
+          <app-input 
+            [control]="'name'" 
+            [inputType]="'text'" 
+            [label]="'Name for Train'"
+            [type]="'text'" 
+            [formGroup]="formTrain" 
+            [errorMessage]="'This name is wrong'">
+          </app-input>
+
+          <app-input 
+            [control]="'description'" 
+            [inputType]="'text'" 
+            [label]="'Description'"
+            [type]="'textarea'" 
+            [formGroup]="formTrain" 
+            [errorMessage]="'This description is wrong'">
+          </app-input>
+
+          <app-input 
+            [control]="'modelGeneratorData'" 
+            [inputType]="'text'" 
+            [label]="'AI model Data Generator'"
+            [type]="'select'" 
+            [formGroup]="formTrain" 
+            [selectOption]="optionsModelGenerator"
+            [errorMessage]="'This Model AI is wrong'">
+          </app-input>
+
+          
+
           <div class="mt-6 grid">
-            <button type="submit" class="w-full py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none">Submit</button>
+            <button type="submit" class="w-full py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none" 
+            [disabled]="formTrain.invalid || !formTrain.touched">
+              Start Trainig
+            </button>
           </div>
         </form>
       </div>
-      <!-- End Card -->
     </div>
   </div>
