--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,7 @@
 :host {
     #main {
         display: grid;
-        grid-template-rows: 10% 75% 10%;
+        grid-template-rows: 10% 85%;
         height: 100vh;
         //max-height: 90vh;
 
