- Create Interceptor for http request and function for handle errors in express checks for properties into requests - Create Snackbar component for Notifications and notification service for use snackbar using observables - Create component for search - Changes in form-train news form controls

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
         [&::-webkit-scrollbar-thumb]:bg-gray-300
         dark:[&::-webkit-scrollbar-track]:bg-neutral-700
         dark:[&::-webkit-scrollbar-thumb]:bg-neutral-500">
+            <app-snackbar></app-snackbar>
             <router-outlet></router-outlet>
         </section>
     <!-- <app-footer></app-footer> -->
