--- a/src/app/configuration/configuration.component.html
+++ b/src/app/configuration/configuration.component.html
@@ -9,95 +9,145 @@
         <!-- Card -->
         <div class="flex flex-col border rounded-xl p-4 sm:p-6 lg:p-10 dark:border-neutral-700">
           <h2 class="text-xl font-semibold text-gray-800 dark:text-neutral-200">
-            Fill in the form
+            Keys Form
           </h2>
   
           <form [formGroup]="formConfig">
 
-            <div>
-              <label for="hs-search-box-with-loading-2" class="block text-sm font-medium mb-2 dark:text-white">Search</label>
-              <div class="flex rounded-lg shadow-sm">
-                <input type="text" id="hs-search-box-with-loading-2" name="hs-search-box-with-loading-2" class="py-3 px-4 block w-full border-gray-200 shadow-sm rounded-s-lg text-sm focus:z-10 focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600" placeholder="Input search">
-                <button type="button" class="w-[2.875rem] h-[2.875rem] flex-shrink-0 inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-e-md border border-transparent bg-blue-600 text-white hover:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none">
-                  <span class="animate-spin inline-block size-4 border-[3px] border-current border-t-transparent text-white rounded-full" role="status" aria-label="loading">
-                    <span class="sr-only">Loading...</span>
-                  </span>
-                </button>
-              </div>
-            </div>
+            <app-search-component
+              [label]="'Secret Key OpenAI'"
+              [placeholder]="'xx-XXXxxXXxXXXXxXXXXXXX'"
+              [formGroup]="formConfig"
+              [control]="'openAiKey'"
+              [search]="awaitValidationKey"
+              (clickSearch)="handlerSearch($event)">
+            </app-search-component>
 
-            <div class="mt-6 grid gap-4 lg:gap-6">
-              <!-- Grid -->
+            <app-input
+                [control]="'postgresUrl'" 
+                [inputType]="'text'" 
+                [label]="'Postgres URL'"
+                [formGroup]="formConfig" 
+                [errorMessage]="'This Postgres Url is wrong'"
+              >
+              </app-input>
+
+            <div class="mt-2 grid gap-4 lg:gap-6">
               <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 lg:gap-6">
                 <app-input
-                  [control]="'openAiKey'" 
+                  [control]="'qdrantUrl'" 
                   [inputType]="'text'" 
-                  [label]="'APi Key OpenAI'"
+                  [label]="'Qdrant URL'"
                   [type]="'text'" 
                   [formGroup]="formConfig" 
-                  [errorMessage]="'This Api Key is wrong'"
+                  [errorMessage]="'This Qdrant url is wrong'"
                 >
                 </app-input>
 
                 <app-input
-                  [control]="'openAiKey'" 
+                  [control]="'useAws'" 
+                  [inputType]="'text'"
+                  [type]="'switch'"
+                  [label]="'Use AWS Bucket'"
+                  [formGroup]="formConfig" 
+                  [errorMessage]="'This field is wrong'"
+                >
+              </app-input>
+              </div>
+
+              <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 lg:gap-6">
+                <app-input
+                  [control]="'awsKeyId'" 
                   [inputType]="'text'" 
-                  [label]="'APi Key OpenAI'"
+                  [label]="'AWS Key Id'"
                   [type]="'text'" 
                   [formGroup]="formConfig" 
-                  [errorMessage]="'This Api Key is wrong'"
+                  [errorMessage]="'This Aws Key is wrong'"
                 >
                 </app-input>
+
+                <app-input
+                  [control]="'awsAccessKey'" 
+                  [inputType]="'text'" 
+                  [label]="'AWS Access Key'"
+                  [type]="'text'" 
+                  [formGroup]="formConfig" 
+                  [errorMessage]="'This Aws Key is wrong'"
+                >
+                </app-input>
+
               </div>
-              <!-- End Grid -->
-  
-              <div>
-                <label for="hs-work-email-hire-us-1" class="block mb-2 text-sm text-gray-700 font-medium dark:text-white">Work Email</label>
-                <input type="email" name="hs-work-email-hire-us-1" id="hs-work-email-hire-us-1" autocomplete="email" class="py-3 px-4 block w-full border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600">
+
+              <div class="grid grid-cols justify-end align-baseline justify-items-end sm:grid-cols-2 gap-4 lg:gap-6">
+                <app-input
+                  [control]="'awsBucket'" 
+                  [inputType]="'text'" 
+                  [label]="'AWS Bucket Name'"
+                  [type]="'text'" 
+                  [formGroup]="formConfig" 
+                  [errorMessage]="'This Aws Key is wrong'"
+                >
+                </app-input>
+
+                <app-input
+                  [control]="'awsRegion'" 
+                  [inputType]="'text'" 
+                  [label]="'AWS Bucket Region'"
+                  [type]="'text'" 
+                  [formGroup]="formConfig" 
+                  [errorMessage]="'This Aws Key is wrong'"
+                >
+                </app-input>
+
               </div>
-  
-              <!-- Grid -->
-              <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 lg:gap-6">
-                <div>
-                  <label for="hs-company-hire-us-1" class="block mb-2 text-sm text-gray-700 font-medium dark:text-white">Company</label>
-                  <input type="text" name="hs-company-hire-us-1" id="hs-company-hire-us-1" class="py-3 px-4 block w-full border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600">
-                </div>
-  
-                <div>
-                  <label for="hs-company-website-hire-us-1" class="block mb-2 text-sm text-gray-700 font-medium dark:text-white">Company Website</label>
-                  <input type="text" name="hs-company-website-hire-us-1" id="hs-company-website-hire-us-1" class="py-3 px-4 block w-full border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600">
-                </div>
-              </div>
-              <!-- End Grid -->
-  
-              <div>
-                <label for="hs-about-hire-us-1" class="block mb-2 text-sm text-gray-700 font-medium dark:text-white">Details</label>
-                <textarea id="hs-about-hire-us-1" name="hs-about-hire-us-1" rows="4" class="py-3 px-4 block w-full border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"></textarea>
-              </div>
+
+              <!-- <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 lg:gap-6">
+                <app-input
+                  [control]="'useAws'" 
+                  [inputType]="'text'"
+                  [type]="'switch'"
+                  [label]="'Use AWS Bucket'"
+                  [formGroup]="formConfig" 
+                  [errorMessage]="'This field is wrong'"
+                >
+                </app-input>
+
+                <app-input
+                  [control]="'awsKeyId'" 
+                  [inputType]="'text'" 
+                  [label]="'AWS Key Id'"
+                  [type]="'text'" 
+                  [formGroup]="formConfig" 
+                  [errorMessage]="'This Aws Key is wrong'"
+                >
+                </app-input>
+              </div> -->
             </div>
           </form>
           <!-- End Grid -->
   
           <!-- Checkbox -->
-          <div class="mt-3 flex">
+          <!-- <div class="mt-3 flex">
             <div class="flex">
               <input id="remember-me" name="remember-me" type="checkbox" class="shrink-0 mt-1.5 border-gray-200 rounded text-blue-600 focus:ring-blue-500 dark:bg-neutral-800 dark:border-neutral-700 dark:checked:bg-blue-500 dark:checked:border-blue-500 dark:focus:ring-offset-gray-800">
             </div>
             <div class="ms-3">
               <label for="remember-me" class="text-sm text-gray-600 dark:text-neutral-400">By submitting this form I have read and acknowledged the <a class="text-blue-600 decoration-2 hover:underline font-medium dark:text-blue-500" href="#">Privacy policy</a></label>
             </div>
-          </div>
+          </div> -->
           <!-- End Checkbox -->
   
           <div class="mt-6 grid">
-            <button type="submit" class="w-full py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none">Send inquiry</button>
+            <button type="submit" class="w-full py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none">
+              Save Configuration
+            </button>
           </div>
   
-          <div class="mt-3 text-center">
+          <!-- <div class="mt-3 text-center">
             <p class="text-sm text-gray-500 dark:text-neutral-500">
               We'll get back to you in 1-2 business days.
             </p>
-          </div>
+          </div> -->
         </div>
         <!-- End Card -->
       </div>
