--- a/src/app/configuration/copy/copy.component.html
+++ b/src/app/configuration/copy/copy.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col justify-end h-12 gap-12 content-around">
+<div class="flex flex-col justify-center h-12 gap-12 content-around">
   <div class="bg-gray-50 border border-gray-200 text-sm text-gray-600 rounded-lg p-4 dark:bg-white/10 dark:border-white/10 dark:text-neutral-400" role="alert">
     <div class="flex">
       <div class="flex-shrink-0">
