--- a/src/app/shared/components/form/input/input.component.html
+++ b/src/app/shared/components/form/input/input.component.html
@@ -1,7 +1,7 @@
 <ng-container [ngSwitch]="type">
 
     <!--STRING-->
-    <div *ngSwitchCase="'text'" class="my-4">
+    <div *ngSwitchCase="'text'" class="my-2">
         <label for="hs-validation-name-error" 
             [ngClass]="formGroup.get(control)?.disabled ? disabledLabel : normalLabel">
             {{ label }}
@@ -29,7 +29,7 @@
         </p>
     </div>
     <!--TEXTAREA-->
-    <div *ngSwitchCase="'textarea'" class="my-4">
+    <div *ngSwitchCase="'textarea'" class="my-2">
         <label for="hs-validation-name-error" 
             [ngClass]="formGroup.get(control)?.disabled ? disabledLabel: normalLabel">
             {{ label }}
@@ -61,7 +61,7 @@
         </p>
     </div>
     <!--SELECT-->
-    <div *ngSwitchCase="'select'" class="my-4">
+    <div *ngSwitchCase="'select'" class="my-2">
 
         <label [ngClass]="formGroup.get(control)?.disabled ? disabledLabel : normalLabel">
             {{ label }}
@@ -86,9 +86,9 @@
         </p>
     </div>
     <!--SWITCH-->
-    <div *ngSwitchCase="'switch'" class="my-4 flex items-center" [formGroup]="formGroup">
+    <div *ngSwitchCase="'switch'" class="my-2" [formGroup]="formGroup">
         <input type="checkbox" [formControlName]="control"
-            class="relative shrink-0 w-11 h-6 hover:none bg-gray-100 checked:bg-none checked:bg-purple-600 border-2  rounded-full cursor-pointer transition-colors ease-in-out duration-200 border-transparent ring-1 ring-transparent focus:border-purple-600 focus:ring-purple-600 ring-offset-white focus:outline-none appearance-none dark:bg-gray-700 dark:checked:bg-purple-600 dark:focus:ring-offset-gray-800 before:inline-block before:w-5 before:h-5 before:bg-white checked:before:bg-purple-200 before:translate-x-0 checked:before:translate-x-full before:shadow before:rounded-full before:transform before:ring-0 before:transition before:ease-in-out before:duration-200 dark:before:bg-gray-400 dark:checked:before:bg-purple-200">
+            class="relative shrink-0 w-11 h-6 hover:none bg-gray-100 checked:bg-none checked:bg-blue-600 border-2  rounded-full cursor-pointer transition-colors ease-in-out duration-200 border-transparent ring-1 ring-transparent focus:border-blue-600 focus:ring-blue-600 ring-offset-white focus:outline-none appearance-none dark:bg-gray-700 dark:checked:bg-blue-600 dark:focus:ring-offset-gray-800 before:inline-block before:w-5 before:h-5 before:bg-white checked:before:bg-blue-200 before:translate-x-0 checked:before:translate-x-full before:shadow before:rounded-full before:transform before:ring-0 before:transition before:ease-in-out before:duration-200 dark:before:bg-gray-400 dark:checked:before:bg-blue-200">
         <label class="text-sm text-gray-500 ml-3 dark:text-gray-400">
             {{ label }}
         </label>
