--- a/src/app/shared/components/form/input/input.component.html
+++ b/src/app/shared/components/form/input/input.component.html
@@ -1,10 +1,20 @@
 <ng-container [ngSwitch]="type">
-
     <!--STRING-->
     <div *ngSwitchCase="'text'" class="my-2">
         <label for="hs-validation-name-error" 
             [ngClass]="formGroup.get(control)?.disabled ? disabledLabel : normalLabel">
             {{ label }}
+            @if(tooltip !== ''){
+                <span class="hs-tooltip-toggle">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="m11.25 11.25.041-.02a.75.75 0 0 1 1.063.852l-.708 2.836a.75.75 0 0 0 1.063.853l.041-.021M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9-3.75h.008v.008H12V8.25Z" />
+                    </svg>
+                </span>
+    
+                <span class="hs-tooltip-content hs-tooltip-shown:opacity-100 hs-tooltip-shown:visible opacity-0 transition-opacity inline-block absolute invisible z-10 py-1 px-2 bg-gray-900 text-xs font-medium text-white rounded shadow-sm dark:bg-neutral-700" role="tooltip">
+                    {{ tooltip }}
+                </span>
+            }
         </label>
         <div class="relative" [formGroup]="formGroup">
             <input [readonly]="readonly" [type]="inputType" [formControlName]="control" [placeholder]="placeholder"
@@ -33,6 +43,19 @@
         <label for="hs-validation-name-error" 
             [ngClass]="formGroup.get(control)?.disabled ? disabledLabel: normalLabel">
             {{ label }}
+
+            @if(tooltip !== ''){
+                <span class="hs-tooltip-toggle">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="m11.25 11.25.041-.02a.75.75 0 0 1 1.063.852l-.708 2.836a.75.75 0 0 0 1.063.853l.041-.021M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9-3.75h.008v.008H12V8.25Z" />
+                    </svg>
+                </span>
+    
+                <span class="hs-tooltip-content hs-tooltip-shown:opacity-100 hs-tooltip-shown:visible opacity-0 transition-opacity inline-block absolute invisible z-10 py-1 px-2 bg-gray-900 text-xs font-medium text-white rounded shadow-sm dark:bg-neutral-700" role="tooltip">
+                    {{ tooltip }}
+                </span>
+            }
+
         </label>
         <div class="relative" [formGroup]="formGroup">
 
@@ -65,6 +88,19 @@
 
         <label [ngClass]="formGroup.get(control)?.disabled ? disabledLabel : normalLabel">
             {{ label }}
+
+            @if(tooltip !== ''){
+                <span class="hs-tooltip-toggle">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="m11.25 11.25.041-.02a.75.75 0 0 1 1.063.852l-.708 2.836a.75.75 0 0 0 1.063.853l.041-.021M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9-3.75h.008v.008H12V8.25Z" />
+                    </svg>
+                </span>
+    
+                <span class="hs-tooltip-content hs-tooltip-shown:opacity-100 hs-tooltip-shown:visible opacity-0 transition-opacity inline-block absolute invisible z-10 py-1 px-2 bg-gray-900 text-xs font-medium text-white rounded shadow-sm dark:bg-neutral-700" role="tooltip">
+                    {{ tooltip }}
+                </span>
+            }
+
         </label>
         <div class="" [formGroup]="formGroup">
             <select [formControlName]="control" [class]="isInvalid(control) ? errorClass : normalClass">
@@ -86,11 +122,24 @@
         </p>
     </div>
     <!--SWITCH-->
-    <div *ngSwitchCase="'switch'" class="my-2" [formGroup]="formGroup">
+    <div *ngSwitchCase="'switch'" class="mt-10 text-center" [formGroup]="formGroup">
         <input type="checkbox" [formControlName]="control"
             class="relative shrink-0 w-11 h-6 hover:none bg-gray-100 checked:bg-none checked:bg-blue-600 border-2  rounded-full cursor-pointer transition-colors ease-in-out duration-200 border-transparent ring-1 ring-transparent focus:border-blue-600 focus:ring-blue-600 ring-offset-white focus:outline-none appearance-none dark:bg-gray-700 dark:checked:bg-blue-600 dark:focus:ring-offset-gray-800 before:inline-block before:w-5 before:h-5 before:bg-white checked:before:bg-blue-200 before:translate-x-0 checked:before:translate-x-full before:shadow before:rounded-full before:transform before:ring-0 before:transition before:ease-in-out before:duration-200 dark:before:bg-gray-400 dark:checked:before:bg-blue-200">
-        <label class="text-sm text-gray-500 ml-3 dark:text-gray-400">
+        <label class="text-sm text-gray-500 ml-3 inline-flex gap-2 dark:text-gray-400 hs-tooltip [--placement:top]">
             {{ label }}
+
+            @if(tooltip !== ''){
+                <span class="hs-tooltip-toggle">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="m11.25 11.25.041-.02a.75.75 0 0 1 1.063.852l-.708 2.836a.75.75 0 0 0 1.063.853l.041-.021M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9-3.75h.008v.008H12V8.25Z" />
+                    </svg>
+                </span>
+    
+                <span class="hs-tooltip-content hs-tooltip-shown:opacity-100 hs-tooltip-shown:visible opacity-0 transition-opacity inline-block absolute invisible z-10 py-1 px-2 bg-gray-900 text-xs font-medium text-white rounded shadow-sm dark:bg-neutral-700" role="tooltip">
+                    {{ tooltip }}
+                </span>
+            }
+
         </label>
 
         <p *ngIf="isInvalid(control)" class="text-xs text-red-600 mt-2">
