--- a/src/app/shared/components/form/search-component/search-component.component.html
+++ b/src/app/shared/components/form/search-component/search-component.component.html
@@ -1,12 +1,12 @@
-<div class="my-4">
+<div class="my-4" [formGroup]="formGroup">
     <label for="hs-search-box-with-loading-2" class="block text-sm font-medium mb-2 dark:text-white">
         {{label}}
     </label>
     <div class="flex rounded-lg shadow-sm">
-      <input type="text" id="hs-search-box-with-loading-2" name="hs-search-box-with-loading-2" class="py-3 px-4 block w-full border-gray-200 shadow-sm rounded-s-lg text-sm focus:z-10 focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600" placeholder="Input search">
+      <input type="text" id="hs-search-box-with-loading-2" name="hs-search-box-with-loading-2" class="py-3 px-4 block w-full border-gray-200 shadow-sm rounded-s-lg text-sm focus:z-10 focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600" [formControlName]="control" placeholder="Input search">
       
-        <button type="button" class="w-[2.875rem] h-[2.875rem] flex-shrink-0 inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-e-md border border-transparent bg-blue-600 text-white hover:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none"
-        (click)="clickEvent()">
+        <button type="button" [ngClass]="check ? buttonClassCheck : buttonClassNormal"
+        (click)="clickEvent()" [disabled]="formGroup.get(control)?.disabled">
             @if(search){
                 <span class="animate-spin inline-block size-4 border-[3px] border-current border-t-transparent text-white rounded-full" role="status" aria-label="loading">
                     <span class="sr-only">Loading...</span>
@@ -17,7 +17,7 @@
                 <svg class="flex-shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75 11.25 15 15 9.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
                 </svg>
-                  
+
             }
             
             @if(!search && !check){
