--- a/src/app/configuration/configuration.component.html
+++ b/src/app/configuration/configuration.component.html
@@ -33,9 +33,18 @@
             >
             </app-input>
 
+            <app-input
+              [control]="'backendUrl'" 
+              [inputType]="'text'" 
+              [label]="'Backend URL'"
+              [formGroup]="formConfig" 
+              [errorMessage]="'This Backend Url is wrong'"
+            >
+            </app-input>
+
             <div class="mt-2 grid gap-4 lg:gap-6">
-              <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 lg:gap-6">
-                <app-input
+              <div class="grid grid-cols-1 sm:grid-cols-2 lg:gap-6">
+                <!-- <app-input
                   [control]="'useVectorDatabase'" 
                   [inputType]="'text'"
                   [type]="'switch'"
@@ -44,7 +53,7 @@
                   [formGroup]="formConfig" 
                   [errorMessage]="'This field is wrong'"
                 >
-                </app-input>
+                </app-input> -->
 
                 <app-input
                   [control]="'useAws'" 
@@ -163,7 +172,7 @@
 
             }@else {
               <button type="submit" class="w-full py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none" 
-              [disabled]="formConfig.invalid" (click)="onsubmit()">
+              [disabled]="!formConfig.valid" (click)="onsubmit()">
                 Save Configuration
               </button>
             }
