--- a/src/app/create-training/create-training.component.html
+++ b/src/app/create-training/create-training.component.html
@@ -1,8 +1,12 @@
-<div class="max-w-[85rem] px-4 py-10 sm:px-6 lg:px-8 lg:py-14 mx-auto">
+<div class="max-w-[85rem] px-4 py-4 sm:px-6 lg:px-8 lg:py-2 mx-auto">
     <div class="grid md:grid-cols-2 items-center gap-12">
-        <app-file-uploader></app-file-uploader>
+        <app-file-uploader
+        (fileAdded)="handlerFiles($event)">
+        </app-file-uploader>
       <div class="relative">
-        <app-form-train></app-form-train>
+        <app-form-train
+        [filesTrain]="this.filesToTraining">
+        </app-form-train>
       </div>
     </div>
   </div>
