--- a/src/app/services/notification/snackbar/snackbar.component.html
+++ b/src/app/services/notification/snackbar/snackbar.component.html
@@ -3,7 +3,7 @@
     <ng-container [ngSwitch]="clase">
 
         <div *ngSwitchCase="'success'" 
-            class="flex-shrink relative  shadow-xl ring-gray-300 justify-between py-6 px-4 bg-white rounded-lg">
+            class="flex-shrink z-50 relative  shadow-xl ring-gray-300 justify-between py-6 px-4 bg-white rounded-lg">
 
             <div class="flex items-center space-x-4 text-black">
                 <div class="mx-auto flex h-12 w-12 flex-shrink-0 items-center justify-center rounded-full bg-green-100 sm:mx-0 sm:h-10 sm:w-10 text-green-800">
@@ -35,7 +35,7 @@
         </div>
 
         <div *ngSwitchCase="'alert'" 
-            class="flex shadow-xl ring-gray-300 justify-between py-6 px-4 bg-white rounded-lg">
+            class="flex z-50 shadow-xl ring-gray-300 justify-between py-6 px-4 bg-white rounded-lg">
 
             <div class="flex items-center space-x-4 text-black">
                 <div class="mx-auto flex h-12 w-12 flex-shrink-0 items-center justify-center rounded-full bg-yellow-200 sm:mx-0 sm:h-10 sm:w-10 text-yellow-600">
@@ -62,7 +62,7 @@
         </div>
 
         <div *ngSwitchCase="'info'" 
-            class="flex shadow-xl ring-gray-300 justify-between py-6 px-4 bg-white rounded-lg">
+            class="flex z-50 shadow-xl ring-gray-300 justify-between py-6 px-4 bg-white rounded-lg">
 
             <div class="flex items-center space-x-4 text-black">
                 <div class="mx-auto flex h-12 w-12 flex-shrink-0 items-center justify-center rounded-full bg-sky-100 sm:mx-0 sm:h-10 sm:w-10 text-sky-700">
@@ -89,7 +89,7 @@
         </div>
 
         <div *ngSwitchCase="'error'" 
-            class="flex shadow-xl ring-gray-300 justify-between py-6 px-4 bg-white rounded-lg">
+            class="flex z-50 shadow-xl ring-gray-300 justify-between py-6 px-4 bg-white rounded-lg">
 
             <div class="flex items-center space-x-4 text-black">
                 <div class="mx-auto flex h-12 w-12 flex-shrink-0 items-center justify-center text-red-60 rounded-full bg-red-100 sm:mx-0 sm:h-10 sm:w-10">
