- Adjust in configuration component, now only url Backend and openai Key be required - Adjust in apiService for get Models in OpenAi - Adjust in search component: now with indicate error and message

--- a/src/app/shared/components/form/input/input.component.html
+++ b/src/app/shared/components/form/input/input.component.html
@@ -16,27 +16,38 @@
                 </span>
             }
         </label>
-        <div class="relative" [formGroup]="formGroup">
-            <input [readonly]="readonly" [type]="inputType" [formControlName]="control" [placeholder]="placeholder"
-                [class]="this.setClassStyle(control)" (keydown.enter)="keydownEnter.emit(true)">
+        <div [class]=" internLabel.length ? 'flex' : 'relative'" [formGroup]="formGroup">
+            @if(internLabel !== '' && internLabel.length){
+                <span [class]="isInvalid(control) ? errorInternalLabelClass : internalLabelClass">
+                    {{ internLabel }}
+                </span>
+            }
+            <input 
+                [readonly]="readonly" 
+                [type]="inputType" 
+                [formControlName]="control" 
+                [placeholder]="placeholder"
+                [class]="setClassStyle(control)" 
+                (keydown.enter)="keydownEnter.emit(true)">
 
             <div *ngIf="icon" class="absolute inset-y-0 left-0 flex items-center pointer-events-none z-20 pl-4">
-                <!-- <app-icon [class]="isInvalid(control) ? 'h-4 w-4 text-red-400' :'h-4 w-4 text-gray-400'" [name]="icon">
-                </app-icon> -->
                 <svg-icon [src]="icon" [class]="isInvalid(control) ? 'h-4 w-4 text-red-400' :'h-4 w-4 text-gray-400'"></svg-icon>
             </div>
-
-            <div class="absolute inset-y-0 right-0 flex items-center pointer-events-none pr-3">
-                <svg *ngIf="isInvalid(control)" class="h-4 w-4 text-red-500" width="16" height="16" fill="currentColor"
-                    viewBox="0 0 16 16" aria-hidden="true">
-                    <path
-                        d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8 4a.905.905 0 0 0-.9.995l.35 3.507a.552.552 0 0 0 1.1 0l.35-3.507A.905.905 0 0 0 8 4zm.002 6a1 1 0 1 0 0 2 1 1 0 0 0 0-2z" />
-                </svg>
-            </div>
+            @if(isInvalid(control) && !internLabel.length){
+                <div class="absolute inset-y-0 right-0 flex items-center pointer-events-none pr-3">
+                    <svg *ngIf="isInvalid(control)" class="h-4 w-4 text-red-500" width="16" height="16" fill="currentColor"
+                        viewBox="0 0 16 16" aria-hidden="true">
+                        <path
+                            d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8 4a.905.905 0 0 0-.9.995l.35 3.507a.552.552 0 0 0 1.1 0l.35-3.507A.905.905 0 0 0 8 4zm.002 6a1 1 0 1 0 0 2 1 1 0 0 0 0-2z" />
+                    </svg>
+                </div>
+            }
         </div>
-        <p *ngIf="isInvalid(control)" class="text-xs text-red-600 mt-2">
-            {{ errorMessage }}
-        </p>
+        @if(isInvalid(control)){
+            <p class="text-xs text-red-600 mt-2">
+                {{ errorMessage }}
+            </p>
+        }
     </div>
     <!--TEXTAREA-->
     <div *ngSwitchCase="'textarea'" class="my-2">
@@ -79,9 +90,11 @@
                 </svg>
             </div>
         </div>
-        <p *ngIf="isInvalid(control)" class="text-xs text-red-600 mt-2">
-            {{ errorMessage }}
-        </p>
+        @if(isInvalid(control)){
+            <p class="text-xs text-red-600 mt-2">
+                {{ errorMessage }}
+            </p>
+        }
     </div>
     <!--SELECT-->
     <div *ngSwitchCase="'select'" class="my-2">
@@ -117,12 +130,14 @@
                 </svg>
             </div>
         </div>
-        <p *ngIf="isInvalid(control)" class="text-xs text-red-600 mt-2">
-            {{ errorMessage }}
-        </p>
+        @if(isInvalid(control)){
+            <p class="text-xs text-red-600 mt-2">
+                {{ errorMessage }}
+            </p>
+        }
     </div>
     <!--SWITCH-->
-    <div *ngSwitchCase="'switch'" class="mt-10 text-center" [formGroup]="formGroup">
+    <div *ngSwitchCase="'switch'" class="mt-10" [formGroup]="formGroup">
         <input type="checkbox" [formControlName]="control"
             class="relative shrink-0 w-11 h-6 hover:none bg-gray-100 checked:bg-none checked:bg-blue-600 border-2  rounded-full cursor-pointer transition-colors ease-in-out duration-200 border-transparent ring-1 ring-transparent focus:border-blue-600 focus:ring-blue-600 ring-offset-white focus:outline-none appearance-none dark:bg-gray-700 dark:checked:bg-blue-600 dark:focus:ring-offset-gray-800 before:inline-block before:w-5 before:h-5 before:bg-white checked:before:bg-blue-200 before:translate-x-0 checked:before:translate-x-full before:shadow before:rounded-full before:transform before:ring-0 before:transition before:ease-in-out before:duration-200 dark:before:bg-gray-400 dark:checked:before:bg-blue-200">
         <label class="text-sm text-gray-500 ml-3 inline-flex gap-2 dark:text-gray-400 hs-tooltip [--placement:top]">
@@ -142,9 +157,11 @@
 
         </label>
 
-        <p *ngIf="isInvalid(control)" class="text-xs text-red-600 mt-2">
-            {{ errorMessage }}
-        </p>
+        @if(isInvalid(control)){
+            <p class="text-xs text-red-600 mt-2">
+                {{ errorMessage }}
+            </p>
+        }
 
     </div>
 
