--- a/src/app/shared/components/form/search-component/search-component.component.html
+++ b/src/app/shared/components/form/search-component/search-component.component.html
@@ -3,7 +3,9 @@
         {{label}}
     </label>
     <div class="flex rounded-lg shadow-sm">
-      <input type="text" id="hs-search-box-with-loading-2" name="hs-search-box-with-loading-2" class="py-3 px-4 block w-full border-gray-200 shadow-sm rounded-s-lg text-sm focus:z-10 focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600" [formControlName]="control" placeholder="Input search">
+      <input type="text" 
+      [class]="isInvalid(control) ? inputErrorClass : inputNormalClass" [formControlName]="control" 
+      [placeholder]="placeholder">
       
         <button type="button" [ngClass]="check ? buttonClassCheck : buttonClassNormal"
         (click)="clickEvent()" [disabled]="formGroup.get(control)?.disabled">
@@ -17,20 +19,20 @@
                 <svg class="flex-shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75 11.25 15 15 9.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
                 </svg>
-
             }
             
             @if(!search && !check){
-                <!-- <svg class="flex-shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    <circle cx="11" cy="11" r="8"></circle>
-                    <path d="m21 21-4.3-4.3"></path>
-                </svg> -->
-
                 <svg class="flex-shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3" />
-                    </svg>
-                      
+                </svg>
             }
           </button>
     </div>
+
+    @if(isInvalid(control)){
+        <p class="text-xs text-red-600 mt-2">
+            {{ errorMessage }}
+        </p>
+    }
+
   </div>
