- Created icon-files for render SVG in diferent type file - Create badge-status for render status in file trainers - Change App for Spanish data view - Adjust table-train for render trainers docs - Create flow with modal for validate an send query for remove file trainers - Adjust in styles

--- a/src/app/create-training/create-training.component.html
+++ b/src/app/create-training/create-training.component.html
@@ -1,11 +1,13 @@
 <div class="max-w-[85rem] px-4 py-4 sm:px-6 lg:px-8 lg:py-2 mx-auto">
     <div class="grid md:grid-cols-2 items-center gap-12">
         <app-file-uploader
-        (fileAdded)="handlerFiles($event)">
+        (fileAdded)="handlerFiles($event)"
+        [clearFiles]="clearFiles">
         </app-file-uploader>
       <div class="relative">
         <app-form-train
-        [filesTrain]="this.filesToTraining">
+        [filesTrain]="this.filesToTraining"
+        (clearForm)="handleClearForm($event)">
         </app-form-train>
       </div>
     </div>
