--- a/src/app/shared/components/hero-home/hero-home.component.html
+++ b/src/app/shared/components/hero-home/hero-home.component.html
@@ -3,7 +3,7 @@
       <!-- Announcement Banner -->
       <div class="flex justify-center">
         <a class="inline-flex items-center gap-x-2 bg-white border border-gray-200 text-sm text-gray-800 p-1 px-3 rounded-full transition hover:border-gray-300 dark:bg-neutral-800 dark:border-neutral-700 dark:hover:border-neutral-600 dark:text-neutral-200" href="">
-          <span class="py-1.5 px-2.5 inline-flex justify-center items-center gap-x-2 rounded-full bg-gradient-to-tl from-blue-600 to-violet-600 font-semibold text-sm text-white dark:bg-neutral-700 dark:text-neutral-400 ">
+          <span class="py-1.5 px-2.5 inline-flex justify-center items-center gap-x-2 rounded-full bg-gradient-to-tl from-[#25CAEB] to-[#5E17D8] font-semibold text-sm text-white dark:bg-neutral-700 dark:text-neutral-400 ">
             <!-- <svg class="flex-shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m9 18 6-6-6-6"/></svg> -->
   
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="flex-shrink-0 size-4">
@@ -12,7 +12,7 @@
             
   
           </span>
-          <b>PRO version </b>- in development
+          <b>PRO version </b>- en desarrollo
         </a>
       </div>
       <!-- End Announcement Banner -->
@@ -20,22 +20,22 @@
       <!-- Title -->
       <div class="mt-5 max-w-2xl text-center mx-auto">
         <h1 class="block font-bold text-gray-800 text-4xl md:text-5xl lg:text-6xl dark:text-neutral-200">
-          Training AI with using 
-          <span class="bg-clip-text bg-gradient-to-tl from-blue-600 to-violet-600 text-transparent">your Docs</span>
+          Usa tus datos,  <br>
+          <span class="bg-clip-text bg-gradient-to-tl from-[#25CAEB] to-[#5E17D8] text-transparent">crea tu IA</span>
         </h1>
       </div>
       <!-- End Title -->
   
       <div class="mt-5 max-w-3xl text-center mx-auto">
         <p class="text-lg text-gray-600 dark:text-neutral-400">
-          Transform the data contained in your files into valid training data.
+          Transforma los datos de tu empresa o negocio en documentos validos para que la IA aprenda.
         </p>
       </div>
   
       <!-- Buttons -->
       <div class="mt-8 gap-3 flex justify-center">
-        <a class="inline-flex justify-center items-center gap-x-3 text-center bg-gradient-to-tl from-blue-600 to-violet-600 hover:from-violet-600 hover:to-blue-600 border border-transparent text-white text-sm font-medium rounded-md focus:outline-none focus:ring-1 focus:ring-gray-600 py-3 px-4 dark:focus:ring-offset-gray-800" href="/trainings">
-          Started Training
+        <a class="inline-flex justify-center items-center gap-x-3 text-center bg-gradient-to-tl from-[#25CAEB] to-[#5E17D8] hover:from-[#5E17D8] hover:to-[#25CAEB] border border-transparent text-white text-sm font-medium rounded-md focus:outline-none focus:ring-1 focus:ring-[#25CAEB]] py-3 px-4 dark:focus:ring-offset-gray-800" href="/trainings">
+          Iniciar Entrenamiento
           <svg class="flex-shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m9 18 6-6-6-6"/></svg>
         </a>
         <!-- <button type="button" class="relative group p-2 ps-3 inline-flex items-center gap-x-2 text-sm font-mono rounded-lg border border-gray-200 bg-white text-gray-800 shadow-sm hover:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-white dark:hover:bg-neutral-800">
@@ -58,7 +58,7 @@
           <path d="M6 13L10 3" stroke="currentColor" stroke-linecap="round"/>
         </svg>
         <a class="inline-flex items-center gap-x-1.5 text-sm text-blue-600 decoration-2 hover:underline font-medium" href="https://github.com/Jucema89/aitrain" target="_blank">
-          View Project code
+          Ver codigo del Proyecto
           <svg class="flex-shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m9 18 6-6-6-6"/></svg>
         </a>
       </div>
