--- a/src/app/configuration/configuration.component.html
+++ b/src/app/configuration/configuration.component.html
@@ -9,13 +9,13 @@
         <!-- Card -->
         <div class="flex flex-col border rounded-xl p-4 sm:p-6 lg:p-10 dark:border-neutral-700">
           <h2 class="text-xl font-semibold text-gray-800 dark:text-neutral-200">
-            Environment Form
+            Variables de Ambientes
           </h2>
   
           <form [formGroup]="formConfig">
 
             <app-search-component
-              [label]="'Backend Url Connection'"
+              [label]="'Url de Backend'"
               [placeholder]="'http://localhost:3900'"
               [formGroup]="formConfig"
               [control]="'backendUrl'"
@@ -43,10 +43,10 @@
                   [control]="'useAws'" 
                   [inputType]="'text'"
                   [type]="'switch'"
-                  [label]="'Use AWS Bucket'"
-                  [tooltip]="'S3 is a Service from AWS for storage documents and files into cloud.'"
+                  [label]="'Usar Bucket de AWS'"
+                  [tooltip]="'Funcion aun en desarrollo: S3 es un servicio de AWS para guardar archivos en cloud.'"
                   [formGroup]="formConfig" 
-                  [errorMessage]="'This field is wrong'"
+                  [errorMessage]="'Este campo tiene errores'"
                 >
               </app-input>
               </div>
@@ -129,22 +129,27 @@
             @if(existEnvLocal){
               <button type="submit" class="w-full py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none" 
               (click)="onsubmit()">
-                  Change Environment
+                  Cambiar Variables
               </button>
 
             }@else {
               <button type="submit" class="w-full py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none" 
               [disabled]="!formConfig.valid" (click)="onsubmit()">
-                Save Configuration
+                Guardar configuración
               </button>
             }
             
           </div>
   
-          <div class="mt-3 text-center">
-            <p class="text-sm text-gray-500 dark:text-neutral-500">
-              This environment is saved in your local data.
-            </p>
+          <div class="mt-3 text-center self-center">
+            <div class="flex gap-2 justify-items-center align-middle text-sm text-gray-500 dark:text-neutral-500">
+              <svg class="w-4" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M16.5 10.5V6.75a4.5 4.5 0 1 0-9 0v3.75m-.75 11.25h10.5a2.25 2.25 0 0 0 2.25-2.25v-6.75a2.25 2.25 0 0 0-2.25-2.25H6.75a2.25 2.25 0 0 0-2.25 2.25v6.75a2.25 2.25 0 0 0 2.25 2.25Z" />
+              </svg>
+              <p>
+                Esta configuración se guarda en tus datos locales.
+              </p>
+            </div>
           </div>
         </div>
         <!-- End Card -->
