Workflows Ready - Create Workflows using github action for branches develop and main - Adjust in angular.json and package.json for running in two environments - Create set-envs for setting environments using secret keys in github nad base64

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -54,16 +54,20 @@
 
 
           <div class="flex items-center gap-x-2 py-2 sm:py-0 sm:ms-auto hs-tooltip [--trigger:hover]">
-            <span class="hs-tooltip-toggle inline-flex items-center gap-x-1.5 py-1.5 px-3 rounded-full text-xs font-medium bg-gray-100 text-gray-800 dark:bg-blue-800/30 dark:text-blue-500">
+            <span class="hs-tooltip-toggle inline-flex items-center gap-x-1.5 py-1.5 px-3 rounded-md  text-xs font-medium bg-gray-100 text-gray-800 dark:bg-blue-800/30 dark:text-blue-500">
                 <!-- <span class="size-1.5 inline-block rounded-full bg-blue-800 dark:bg-blue-500"></span> -->
                 <div class="inline-flex items-center">
-                    <span class="size-2 inline-block bg-gray-500 rounded-full me-2"></span>
-                    <span class="text-gray-600 dark:text-neutral-400">AItrain PRO</span>
+                    <span class="size-2 inline-block bg-gray-500 rounded-md me-2"></span>
+                    <span class="text-gray-600 dark:text-neutral-400">Aitrain 
+                      <span class="ms-0.5 inline-flex items-center align-middle gap-x-1.5 py-0.5 px-1.5 rounded-md text-[11px] font-medium bg-gradient-to-tl from-[#25CAEB] to-[#5E17D8] text-white dark:bg-white dark:text-neutral-800">
+                        Pro
+                      </span>
+                    </span>
                   </div>
               </span>
 
               <span class="hs-tooltip-content hs-tooltip-shown:opacity-100 hs-tooltip-shown:visible opacity-0 transition-opacity inline-block absolute invisible z-10 py-3 px-4 bg-white border text-sm text-gray-600 rounded-lg shadow-md dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400" role="tooltip">
-               in Development 💻
+               en Desarrollo 💻
               </span>
           </div>
 
