--- a/src/app/shared/components/steps-use/steps-use.component.html
+++ b/src/app/shared/components/steps-use/steps-use.component.html
@@ -132,7 +132,7 @@
             <div class="grow pt-0.5 pb-8 sm:pb-12">
               <p class="text-sm md:text-base text-black">
                 <span class="text-black font-bold">Crea Doc Trainers:</span>
-                Ve a Doc Trainers y en crear docs sube los archivos que usaras de base para entrenamieno, llena el formulario y AItrain generará los archivos <small class="text-gray-900 text-xs font-normal px-2 py-1 rounded-lg bg-gray-300">.jsonl</small> para entrenar la IA.
+                Ve a Doc Trainers y en crear docs sube los archivos que usaras de base para entrenamieno, llena el formulario y Aitrain generará los archivos <small class="text-gray-900 text-xs font-normal px-2 py-1 rounded-lg bg-gray-300">.jsonl</small> para entrenar la IA.
               </p>
             </div>
             <!-- End Right Content -->
