--- a/src/app/shared/components/creator-card/creator-card.component.html
+++ b/src/app/shared/components/creator-card/creator-card.component.html
@@ -9,7 +9,8 @@
         Julio Daza
       </h4>
       <p class="text-sm text-gray-800 md:text-gray-500 dark:text-white md:dark:text-neutral-500">
-        Creator & Manteiner
+        Creator & Maintainer
+        
       </p>
     </div>
     <!-- End User Content -->
