--- a/src/app/shared/components/hero-home/hero-home.component.html
+++ b/src/app/shared/components/hero-home/hero-home.component.html
@@ -12,7 +12,7 @@
             
   
           </span>
-          <b>PRO version </b>- en desarrollo
+          <b>Versión Pro |</b>en desarrollo
         </a>
       </div>
       <!-- End Announcement Banner -->
