--- a/src/app/shared/components/stack-tech/stack-tech.component.html
+++ b/src/app/shared/components/stack-tech/stack-tech.component.html
@@ -3,7 +3,7 @@
   <!-- Title -->
   <div class="w-2/3 sm:w-1/2 lg:w-1/3 mx-auto text-center mb-6">
     <h2 class="text-gray-600 dark:text-neutral-400">
-      AItrain existe gracias a estas tecnologias increibles a lo hacen posible</h2>
+      Aitrain existe gracias a que estas tecnologias increibles lo hacen posible</h2>
   </div>
   <!-- End Title -->
 
