Responseive adjust - Adjust in componente responsive: Configuration, Hero home, header-nav and componente <pre> for docker compose file

--- a/src/app/pages/configuration/copy/copy.component.html
+++ b/src/app/pages/configuration/copy/copy.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col justify-center h-12 gap-12 content-around">
+<div class="flex flex-col gap-12 content-around">
   <div class="bg-gray-50 border border-gray-200 text-sm text-gray-600 rounded-lg p-4 dark:bg-white/10 dark:border-white/10 dark:text-neutral-400" role="alert">
     <div class="flex align-text-bottom gap-4 ">
       <div class="flex align-middle">
@@ -23,7 +23,7 @@
         Aitrain utiliza varias tecnologías para hacer posible generar archivos de entrada para modelos de IA; estas claves se guardan en el navegador y se envían en solicitudes solo durante las llamadas al backend. Para esto debes tener el backend en tu maquina local, para esto usamos Docker.
       </p>
       <!-- Brands -->
-      <div class="mt-8">
+      <div class="mt-8 mb-12">
         <h2 class="text-lg font-semibold text-gray-800 dark:text-neutral-200">
           Stack Utilizado
         </h2>
