--- a/src/app/pages/configuration/configuration.component.html
+++ b/src/app/pages/configuration/configuration.component.html
@@ -1,11 +1,11 @@
 
-<div class="max-w-[85rem] px-4 py-4 sm:px-6 lg:px-8 lg:py-8 mx-auto">
+<div class="max-w-[85rem] px-4 py-8 sm:px-6 lg:px-8 lg:py-8 mx-auto">
     <!-- Grid -->
-    <div class="grid md:grid-cols-2 items-center gap-12">
+    <div class="lg:grid lg:grid-cols-2 sm:flex sm:flex-col sm:gap-12 sm:justify-evenly items-center gap-12">
      
       <app-copy></app-copy>
   
-      <div class="relative">
+    
         <!-- Card -->
         <div class="flex flex-col border rounded-xl p-4 sm:p-6 lg:p-10 dark:border-neutral-700">
           <h2 class="text-xl font-semibold text-gray-800 dark:text-neutral-200">
@@ -153,7 +153,7 @@
           </div>
         </div>
         <!-- End Card -->
-      </div>
+
       <!-- End Col -->
     </div>
     <!-- End Grid -->
