--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,7 +1,7 @@
-<header class="flex flex-wrap sm:justify-start sm:flex-nowrap z-50 w-full bg-white border-b border-gray-200 text-sm py-2 sm:py-0 dark:bg-neutral-800 dark:border-neutral-700">
-    <nav class="relative max-w-[85rem] w-full mx-auto px-4 sm:flex sm:items-center sm:justify-between sm:px-6 lg:px-8" aria-label="Global">
+<header class="flex flex-wrap sm:justify-start sm:flex-nowrap z-50 w-full bg-white lg:border-b border-gray-200 text-sm py-2 sm:py-0 dark:bg-neutral-800 dark:border-neutral-700">
+    <nav class="relative max-w-[85rem] w-full mx-auto px-4 sm:flex sm:items-center sm:justify-between sm:px-6 lg:px-8 z-50 bg-white" aria-label="Global">
       <div class="flex items-center justify-between">
-        <a class="flex-none text-xl self-center font-semibold dark:text-white" href="/" aria-label="Brand">
+        <a class="flex-none text-xl self-center font-semibold da  rk:text-white" href="/" aria-label="Aitrain">
            <app-logo-aitrain></app-logo-aitrain>
         </a>
         <div class="sm:hidden">
@@ -11,7 +11,7 @@
           </button>
         </div>
       </div>
-      <div id="navbar-collapse-with-animation" class="hs-collapse hidden overflow-hidden transition-all duration-300 basis-full grow sm:block">
+      <div id="navbar-collapse-with-animation" class="hs-collapse hidden overflow-hidden transition-all duration-300 basis-full grow sm:block ">
         <div class="flex flex-col sm:flex-row sm:items-center py-2 md:py-0 sm:ps-7">
 
             @for(route of rotesUrl; track route.id){
