--- a/src/app/shared/components/steps-use/steps-use.component.html
+++ b/src/app/shared/components/steps-use/steps-use.component.html
@@ -2,7 +2,7 @@
 <!-- Approach -->
 <div class="bg-gray-50">
     <!-- Approach -->
-    <div class="max-w-[75vw] px-4 xl:px-0 py-10 lg:pt-20 lg:pb-20 mx-auto">
+    <div class="lg:max-w-[75vw] px-4 xl:px-0 py-10 lg:pt-20 lg:pb-20 mx-auto">
       <!-- Title -->
       <div class="max-w-3xl mb-10 lg:mb-14">
         <h2 class="text-black font-bold text-3xl md:text-4xl md:leading-tight">
@@ -25,37 +25,39 @@
       <div class="grid grid-cols-1 lg:grid-cols-2 gap-10 lg:gap-16 lg:items-center">
         <div class="w-full lg:aspect-none">
           <!-- <img class="w-full object-cover rounded-xl" src="https://images.unsplash.com/photo-1587614203976-365c74645e83?q=80&w=480&h=600&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Image Description"> -->
-          <div class="flex justify-end py-4 px-4 w-full text-base leading-relaxed text-blue-400 bg-indigo-900 rounded-lg shadow-lg xl:text-lg xl:pr-2">
-          <pre class="text-sm">
-            <span class="text-blue-100">##docker-compose.yml</span>
-            version: '3.8'
-            services:
-
-              db:
-                image: postgres
-                environment:
-                  POSTGRES_DB: aitrain
-                  POSTGRES_USER: postgres
-                  POSTGRES_PASSWORD: aitrainPass
-                ports:
-                  - "6432:5432"
+          <div class="justify-end py-4 text-base leading-relaxed text-blue-400 bg-indigo-900 rounded-lg shadow-lg xl:text-lg xl:pr-2">
+            <div class="text-sm justify-center max-w-full overflow-x-auto">
+              <pre class="whitespace-pre-wrap text-left pl-0 self-start">
+                <span class="text-blue-100">##docker-compose.yml</span>
+                version: '3.8'
+                services:
+          
+                  db:
+                    image: postgres
+                    environment:
+                      POSTGRES_DB: aitrain
+                      POSTGRES_USER: postgres
+                      POSTGRES_PASSWORD: aitrainPass
+                    ports:
+                      - "6432:5432"
+                    volumes:
+                      - postgres_data:/var/lib/postgresql/data
+          
+                  app:
+                    image: juliodaza/aitrain-backend:latest
+                    ports:
+                      - "3900:3900"
+                    environment:
+                      DATABASE_URL: 
+                        "postgresql://postgres:aitrainPass&#64;db:5432/aitrain"
+                    depends_on:
+                      - db
+          
                 volumes:
-                  - postgres_data:/var/lib/postgresql/data
-
-              app:
-                image: juliodaza/aitrain-backend:latest
-                ports:
-                  - "3900:3900"
-                environment:
-                  DATABASE_URL: "postgresql://postgres:aitrainPass&#64;db:5432/aitrain"
-                depends_on:
-                  - db
-
-            volumes:
-              postgres_data:
-
-          </pre>
-        </div>
+                  postgres_data:
+              </pre>
+            </div>
+          </div>
 
         </div>
         <!-- End Col -->
